--- a/MathGame/AppShell.xaml
+++ b/MathGame/AppShell.xaml
@@ -4,10 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:MathGame"
-    Title="MathGame">
+    Title="MathGame"
+    BackgroundColor="White">
 
     <ShellContent
-        Title="Home"
+        Title="Jogo Matemático"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
